# repo-digest-tool

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gptignore  .gptinclude  Dockerfile  LICENSE  README.md  RepoDigest.ipynb  docker-compose.yml  main.py  makefile  pyproject.toml  test.py
.github/workflows/: backend.yml  docker-build.yml  frontend-ci.yml  frontend.yml  test-mai.yml  test-main.yml  test.yml
docs/: 20241216_use_sql_plan.md  gui_masterplan.md  repo_digest_gui_masterplan.md  repo_digest_tool_specification.md  rust_migration_plan.md  status.md
examples/: HirotoShioi_repo-digest-tool_digest.txt
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/.github/workflows/: frontend-ci.yml
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  router.tsx
frontend/src/components/: AddRepositoryDialog.tsx  FullScreenLoader.tsx  Layout.tsx  LoadingButton.tsx  LoadingSpinner.tsx  RepositoryCard.tsx  RepositoryDetails.tsx  RepositoryList.tsx  SearchFilter.tsx  error-page.tsx  full-screen-loader.tsx  layout.tsx  loading-spinner.tsx
frontend/src/components/home/: AddRepositoryDialog.tsx  RepositoryList.tsx  add-repository-dialog.tsx  repository-card.tsx  repository-list.tsx
frontend/src/components/repository-info/: ExcludeTab.tsx  FilterSettingDialog.tsx  IncludeTab.tsx  aI-tab.tsx  exclude-tab.tsx  file-types-chart.tsx  filter-setting-dialog.tsx  include-tab.tsx  max-tokens-tab.tsx  pattern-list.tsx  statistics.tsx  top-files-chart.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/contexts/: FilterSettingsContext.tsx  filter-settings-context.tsx
frontend/src/hooks/: useFileStats.ts  useRepositories.ts  useTheme.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts  schema.d.ts
frontend/src/pages/: RepositoriesPage.tsx  RepositoryDetailsPage.tsx
frontend/src/pages/Repositories/: index.tsx
frontend/src/pages/RepositoryDetails/: index.tsx
frontend/src/pages/Settings/: index.tsx
frontend/src/provider/: index.tsx
frontend/src/providers/: index.tsx
frontend/src/routes/: $author.$name.tsx  __root.tsx  index.tsx
frontend/src/services/digest/: mutations.ts
frontend/src/services/repositories/: mutations.ts  (+2 more)
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
frontend/test/: example.spec.ts  home.spec.ts  test-utils.tsx
frontend/test/components/: add-repository-dialog.test.tsx  loading-button.test.tsx  repository-card.test.tsx  repository-list.test.tsx
frontend/test/setup/: test-setup.ts
lib/: __init__.py  digest.py  file_filtering_chain.py  filter.py  github.py  summarizer.py  summary.py
repo_tool/: __init__.py  api.py  cli.py  main.py
repo_tool/api/: __init__.py  database.py  repositories.py  router.py
repo_tool/app/: main.py
repo_tool/app/pages/: repository_management.py
repo_tool/app/static/: styles.css
repo_tool/core/: __init__.py  contants.py  digest.py  filter.py  github.py  llm.py  logger.py  repository.py  summary.py
repo_tool_rust/: Cargo.toml
repo_tool_rust/src/: clone.rs  compress.rs  filter.rs  lib.rs  main.rs  summary.rs
templates/: report.html
tests/: diget_test.py  github_test.py  repositories_test.py  router_test.py  test_digest.py
(+24 files in other folders)
