# https://packaging.python.org/en/latest/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-digest-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "gitpython>=3.1.43",
    "jinja2>=3.1.4",
    "langchain>=0.3.9",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.11",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tiktoken>=0.8.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "types-aiofiles>=24.1.0.20240626",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["repo_tool"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
