# https://packaging.python.org/en/latest/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-digest-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.6",
    "gitpython>=3.1.43",
    "humanize>=4.11.0",
    "jinja2>=3.1.4",
    "langchain>=0.3.9",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.11",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.8.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "fastapi-cli>=0.0.6",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "types-aiofiles>=24.1.0.20240626",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["repo_tool"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
